z-index fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,7 +70,6 @@ button {
   text-align: center;
   font-weight:bold;
   margin: 3%;
-  z-index: 0;
 }
 
 .main-photo1 {
@@ -306,7 +305,7 @@ img.login-photo {
   height: 100vh;
   position: fixed;
   background-color: white;
-  z-index: 9;
+  /* z-index: 9; */
 }
 
 /* .others-lobby-header2 {
